--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="players-albam">
                 <div class="players-naymer">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-1.png">
+                        <img src="responsive-football-main/images/players/player-1.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Naymer Jr</h3>
@@ -38,18 +38,18 @@
 
                 <div class="players-lionel">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-2.png">
+                        <img src="responsive-football-main/images/players/player-2.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Lionel Messi</h3>
-                        <p><strong>Rashford, 23, had a scan on Tuesday after being hampered by the problem.</p></strong>
+                        <p><strong>Rashford, 23, had a scan on Tuesday after being hampered by the problem.</strong></p>
                     </article>
 
                 </div>
 
                 <div class="players-cristiano">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-3.png">
+                        <img src="responsive-football-main/images/players/player-3.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Cristiano Ronaldo</h3>
@@ -61,7 +61,7 @@
 
                 <div class="players-paulo ">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-4.png">
+                        <img src="responsive-football-main/images/players/player-4.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Paulo Dybala</h3>
@@ -73,7 +73,7 @@
 
                 <div class="players-mesut">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-5.png">
+                        <img src="responsive-football-main/images/players/player-5.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Mesut Ozil</h3>
@@ -85,7 +85,7 @@
 
                 <div class="players-mauro">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-6.png">
+                        <img src="responsive-football-main/images/players/player-6.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Mauro Icardi</h3>
@@ -97,7 +97,7 @@
 
                 <div class="players-maria">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-7.png">
+                        <img src="responsive-football-main/images/players/player-7.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Di Maria</h3>
@@ -109,7 +109,7 @@
 
                 <div class="players-kylian">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-8.png">
+                        <img src="responsive-football-main/images/players/player-8.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Kylian Mbappe</h3>
@@ -121,7 +121,7 @@
 
                 <div class="players-mohamed">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-9.png">
+                        <img src="responsive-football-main/images/players/player-9.png" alt="">
                     </div>
                     <article class="players-detail">
                         <h3>Mohamed Salah</h3>
@@ -137,7 +137,7 @@
         <section class="bb">
             <artical class="second-blogs">
                 <p class="text">
-                <h2><b>All Highlights Copa America 2021</h2></b>
+                <h2><strong>All Highlights Copa America 2021</strong></h2>
                 had a scan on
                 Tuesday after being
                 hampered by the problem in the latter.had a scan on Tuesday after being
