--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <!-- </section> -->
                 <!-- <section class="container"> -->
                 <div class="last-picture">
-                    <img src="responsive-football-main/images/Logo.png">
+                    <img src="responsive-football-main/images/Logo.png" alt="">
                     <div class="social-icon">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-dribbble"></i></a>
