--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                 Tuesday after being
                 hampered by the problem in the latter.had a scan on Tuesday after being
                 hampered by the problem in the latter.
-                It is very fantesty.</p><br>
+                It is very fantesty.</p>
+            <br>
                 <a id="artical-link" target="_blank" href="watch-now">Watch now</a>
 
                 </article>
