--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/4880c1fd45.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Football</title>
 </head>
 
 <body>
@@ -15,18 +15,19 @@
         <article id="first-pic">
             <h2 id="short-text">Conmebol Copa America 2021<br><a id="artical-link" target="_blank"
                     href="watch-now">Watch Now</a></h2>
-            <img class="football" src="responsive-football-main/images/banner.png" alt="">
+            <img class="football" src="./images/banner.png" alt="banner">
 
         </article>
 
-        <!-- ----
-            Football-player   --- -->
+        <!------- ----
+            Football-player 
+                               --- -->
 
         <section class="container">
             <div class="players-albam">
                 <div class="players-naymer">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-1.png" alt="">
+                        <img src="./images/players/player-1.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Naymer Jr</h3>
@@ -38,7 +39,7 @@
 
                 <div class="players-lionel">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-2.png" alt="">
+                        <img src="./images/players/player-2.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Lionel Messi</h3>
@@ -49,7 +50,7 @@
 
                 <div class="players-cristiano">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-3.png" alt="">
+                        <img src="./images/players/player-3.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Cristiano Ronaldo</h3>
@@ -61,7 +62,7 @@
 
                 <div class="players-paulo ">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-4.png" alt="">
+                        <img src="./images/players/player-4.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Paulo Dybala</h3>
@@ -73,7 +74,7 @@
 
                 <div class="players-mesut">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-5.png" alt="">
+                        <img src="./images/players/player-5.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Mesut Ozil</h3>
@@ -85,7 +86,7 @@
 
                 <div class="players-mauro">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-6.png" alt="">
+                        <img src="./images/players/player-6.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Mauro Icardi</h3>
@@ -97,7 +98,7 @@
 
                 <div class="players-maria">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-7.png" alt="">
+                        <img src="./images/players/player-7.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Di Maria</h3>
@@ -109,7 +110,7 @@
 
                 <div class="players-kylian">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-8.png" alt="">
+                        <img src="./images/players/player-8.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Kylian Mbappe</h3>
@@ -121,7 +122,7 @@
 
                 <div class="players-mohamed">
                     <div class="photo">
-                        <img src="responsive-football-main/images/players/player-9.png" alt="">
+                        <img src="./images/players/player-9.png" alt="player">
                     </div>
                     <article class="players-detail">
                         <h3>Mohamed Salah</h3>
@@ -148,12 +149,12 @@
 
                 </article>
                 <div class="second-part">
-                    <img src="responsive-football-main/images/match.png" alt="">
+                    <img src="./images/match.png" alt="match">
                 </div>
                 <!-- </section> -->
                 <!-- <section class="container"> -->
                 <div class="last-picture">
-                    <img src="responsive-football-main/images/Logo.png" alt="">
+                    <img src="./images/Logo.png" alt="Logo">
                     <div class="social-icon">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-dribbble"></i></a>
