--- a/index.html
+++ b/index.html
@@ -138,13 +138,14 @@
         <section class="bb">
             <artical class="second-blogs">
                 <p class="text">
-                <h2><strong>All Highlights Copa America 2021</strong></h2>
-                had a scan on
-                Tuesday after being
-                hampered by the problem in the latter.had a scan on Tuesday after being
-                hampered by the problem in the latter.
-                It is very fantesty.</p>
-            <br>
+                    <h2><strong>All Highlights Copa America 2021</strong></h2>
+                    had a scan on
+                    Tuesday after being
+                    hampered by the problem in the latter.had a scan on Tuesday after being
+                    hampered by the problem in the latter.
+                    It is very fantesty.
+                </p>
+                <br>
                 <a id="artical-link" target="_blank" href="watch-now">Watch now</a>
 
                 </article>
