--- a/index.html
+++ b/index.html
@@ -130,28 +130,29 @@
                             half of
                             the 2020-21 season.</p>
                     </article>
-
                 </div>
-
             </div>
         </section>
-        <section class="bb">
-            <artical class="second-blogs">
-                <p class="text">
+        
+        <section class="fantesty-container" >
+           <div class="fantesty">
+            <div class="second-blogs">
                     <h2><strong>All Highlights Copa America 2021</strong></h2>
-                    had a scan on
+                    <p >  had a scan on
                     Tuesday after being
                     hampered by the problem in the latter.had a scan on Tuesday after being
                     hampered by the problem in the latter.
                     It is very fantesty.
                 </p>
-                <br>
+                
                 <a id="artical-link" target="_blank" href="watch-now">Watch now</a>
+            </div>
 
-                </article>
                 <div class="second-part">
                     <img src="./images/match.png" alt="match">
                 </div>
+           </div>
+
                 <!-- </section> -->
                 <!-- <section class="container"> -->
                 <div class="last-picture">
