--- a/index.html
+++ b/index.html
@@ -152,22 +152,19 @@
                     <img src="./images/match.png" alt="match">
                 </div>
            </div>
-
-                <div class="last-picture">
-                    <img src="./images/Logo.png" alt="Logo">
-                    <div class="social-icon">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-dribbble"></i></a>
-                        <a href="#"><i class="fab fa-twitter-square"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
-                </div>
-
+                    <img class="last-picture" src="./images/Logo.png" alt="Logo">
+                   
         </section>
     </main>
-    <footer>
+    <!-- <footer>
         <p class="copy">Copyright © 2021 Ashik</p>
-    </footer>
+        <div class="social-icon">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-dribbble"></i></a>
+            <a href="#"><i class="fab fa-twitter-square"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+    </footer> -->
 </body>
 
 </html>
