--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                    
         </section>
     </main>
-    <!-- <footer>
+    <footer>
         <p class="copy">Copyright © 2021 Ashik</p>
         <div class="social-icon">
             <a href="#"><i class="fab fa-facebook"></i></a>
@@ -164,7 +164,7 @@
             <a href="#"><i class="fab fa-twitter-square"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
