--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <main>
-        <article id="first-pic">
-            <h2 id="short-text">Conmebol Copa America 2021<br><a id="artical-link" target="_blank"
-                    href="watch-now">Watch Now</a></h2>
-            <img class="football" src="./images/banner.png" alt="banner">
-
-        </article>
+        <div id="first-pic">
+           <div> <h2 id="short-text">Conmebol Copa America 2021<br><a id="artical-link" target="_blank"
+            href="watch-now">Watch Now</a></h2></div>
+            <div>
+                <img class="football" width="60%" src="./images/banner.png" alt="banner"></div>
+            </div>
 
         <!------- ----
             Football-player 
