--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="first-pic">
             <div>
                 <h2 id="short-text">Conmebol Copa America 2021<br><a id="artical-link" target="_blank"
-                        href="watch-now">Watch Now&rarr;</a></h2>
+                        href="watch-now">Watch Now<span class="arrow">&rarr;</span></a></h2>
             </div>
             <div>
                 <img class="football" width="60%" src="./images/banner.png" alt="banner"></div>
